change Api for put request
